--- a/form.ui
+++ b/form.ui
@@ -23,7 +23,17 @@ border-color: rgb(85, 87, 83);
 border: 2px solid;}</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="3" column="2">
+      <item row="6" column="5">
+       <widget class="QCheckBox" name="checkSaveP2">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="2">
        <widget class="QLabel" name="labelT1">
         <property name="styleSheet">
          <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
@@ -33,7 +43,7 @@ border: 2px solid;}</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
+      <item row="5" column="0">
        <widget class="QLabel" name="writeT2">
         <property name="enabled">
          <bool>true</bool>
@@ -47,7 +57,19 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="7">
+       <widget class="QLineEdit" name="valueT3">
+        <property name="cursor">
+         <cursorShape>ForbiddenCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 500 12pt &quot;Ubuntu&quot;;
+border-color: rgb(0, 0, 0);
+border: 2px solid;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
        <widget class="QLabel" name="writeT1">
         <property name="enabled">
          <bool>true</bool>
@@ -61,7 +83,7 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="5">
+      <item row="4" column="5">
        <widget class="QCheckBox" name="checkSaveT3">
         <property name="text">
          <string/>
@@ -71,7 +93,7 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="5" column="1">
        <widget class="QCheckBox" name="checkSaveT2">
         <property name="text">
          <string/>
@@ -81,7 +103,7 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="4">
+      <item row="5" column="4">
        <widget class="QLabel" name="writeT4">
         <property name="enabled">
          <bool>true</bool>
@@ -98,7 +120,7 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="3">
+      <item row="4" column="3">
        <widget class="QLineEdit" name="valueT1">
         <property name="cursor">
          <cursorShape>ForbiddenCursor</cursorShape>
@@ -110,7 +132,7 @@ border: 2px solid;</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="3">
+      <item row="5" column="3">
        <widget class="QLineEdit" name="valueT2">
         <property name="cursor">
          <cursorShape>ForbiddenCursor</cursorShape>
@@ -122,7 +144,7 @@ border: 2px solid;</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="4">
+      <item row="4" column="4">
        <widget class="QLabel" name="writeT3">
         <property name="enabled">
          <bool>true</bool>
@@ -136,7 +158,7 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="5">
+      <item row="5" column="5">
        <widget class="QCheckBox" name="checkSaveT4">
         <property name="text">
          <string/>
@@ -146,7 +168,7 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="7">
+      <item row="5" column="7">
        <widget class="QLineEdit" name="valueT4">
         <property name="cursor">
          <cursorShape>ForbiddenCursor</cursorShape>
@@ -158,19 +180,7 @@ border: 2px solid;</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="7">
-       <widget class="QLineEdit" name="valueT3">
-        <property name="cursor">
-         <cursorShape>ForbiddenCursor</cursorShape>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">font: 500 12pt &quot;Ubuntu&quot;;
-border-color: rgb(0, 0, 0);
-border: 2px solid;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="2">
+      <item row="5" column="2">
        <widget class="QLabel" name="labelT2">
         <property name="styleSheet">
          <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
@@ -180,7 +190,7 @@ border: 2px solid;</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="6">
+      <item row="5" column="6">
        <widget class="QLabel" name="labelT4">
         <property name="styleSheet">
          <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
@@ -203,7 +213,7 @@ border: 2px solid;</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="6">
+      <item row="4" column="6">
        <widget class="QLabel" name="labelT3">
         <property name="styleSheet">
          <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
@@ -225,7 +235,7 @@ font: 12pt &quot;Ubuntu&quot;;</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QCheckBox" name="checkSaveT1">
         <property name="text">
          <string/>
@@ -235,11 +245,120 @@ font: 12pt &quot;Ubuntu&quot;;</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="8">
+      <item row="6" column="7">
+       <widget class="QLineEdit" name="valueP2">
+        <property name="styleSheet">
+         <string notr="true">font: 500 12pt &quot;Ubuntu&quot;;
+border-color: rgb(0, 0, 0);
+border: 2px solid;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="2">
+       <widget class="QLabel" name="label_P1">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Druck 1:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="writeP1">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu&quot;;
+color: rgb(204, 0, 0);</string>
+        </property>
+        <property name="text">
+         <string>write</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="4">
+       <widget class="QLabel" name="writeP2">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu&quot;;
+color: rgb(204, 0, 0);</string>
+        </property>
+        <property name="text">
+         <string>write</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
+       <widget class="QCheckBox" name="checkSaveP1">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="6">
+       <widget class="QLabel" name="label_P2">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Druck 2:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="3">
+       <widget class="QLineEdit" name="valueP1">
+        <property name="styleSheet">
+         <string notr="true">font: 500 12pt &quot;Ubuntu&quot;;
+border-color: rgb(0, 0, 0);
+border: 2px solid;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0" colspan="8">
        <widget class="QWidget" name="plotWidget" native="true">
         <property name="styleSheet">
          <string notr="true"/>
         </property>
+        <widget class="QPushButton" name="stopBtn">
+         <property name="geometry">
+          <rect>
+           <x>550</x>
+           <y>380</y>
+           <width>181</width>
+           <height>30</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Close CO2 Messstand</string>
+         </property>
+        </widget>
+        <widget class="QTextEdit" name="kommentar">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>210</y>
+           <width>421</width>
+           <height>201</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="labelKommentar">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>180</y>
+           <width>121</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Kommentar</string>
+         </property>
+        </widget>
        </widget>
       </item>
      </layout>
@@ -262,6 +381,14 @@ font: 12pt &quot;Ubuntu&quot;;</string>
      <zorder>checkSaveT3</zorder>
      <zorder>checkSaveT4</zorder>
      <zorder>saveBtn</zorder>
+     <zorder>valueP1</zorder>
+     <zorder>valueP2</zorder>
+     <zorder>writeP1</zorder>
+     <zorder>writeP2</zorder>
+     <zorder>checkSaveP1</zorder>
+     <zorder>checkSaveP2</zorder>
+     <zorder>label_P1</zorder>
+     <zorder>label_P2</zorder>
     </widget>
    </item>
   </layout>
