--- a/form.ui
+++ b/form.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1068</width>
+    <height>607</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,6 +40,16 @@ border: 2px solid;}</string>
         </property>
         <property name="text">
          <string>Temp 1:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="5">
+       <widget class="QCheckBox" name="checkSaveT4">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -158,16 +168,6 @@ color: rgb(204, 0, 0);</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="5">
-       <widget class="QCheckBox" name="checkSaveT4">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
       <item row="5" column="7">
        <widget class="QLineEdit" name="valueT4">
         <property name="cursor">
@@ -220,18 +220,6 @@ border: 2px solid;</string>
         </property>
         <property name="text">
          <string>Temp 3:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="7">
-       <widget class="QPushButton" name="saveBtn">
-        <property name="styleSheet">
-         <string notr="true">border-radius: 10px;
-background-color: rgb(255, 255, 255);
-font: 12pt &quot;Ubuntu&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Start saving Data</string>
         </property>
        </widget>
       </item>
@@ -315,50 +303,58 @@ border: 2px solid;</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="0" colspan="8">
+      <item row="7" column="3">
+       <widget class="QSlider" name="horizontalSlider">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="7">
+       <widget class="QLineEdit" name="lineEdit"/>
+      </item>
+      <item row="8" column="4" colspan="4">
+       <widget class="QWidget" name="plot2Widget" native="true"/>
+      </item>
+      <item row="8" column="0" colspan="4">
        <widget class="QWidget" name="plotWidget" native="true">
         <property name="styleSheet">
          <string notr="true"/>
         </property>
-        <widget class="QPushButton" name="stopBtn">
-         <property name="geometry">
-          <rect>
-           <x>550</x>
-           <y>380</y>
-           <width>181</width>
-           <height>30</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Close CO2 Messstand</string>
-         </property>
-        </widget>
-        <widget class="QTextEdit" name="kommentar">
-         <property name="geometry">
-          <rect>
-           <x>20</x>
-           <y>210</y>
-           <width>421</width>
-           <height>201</height>
-          </rect>
-         </property>
-        </widget>
-        <widget class="QLabel" name="labelKommentar">
-         <property name="geometry">
-          <rect>
-           <x>20</x>
-           <y>180</y>
-           <width>121</width>
-           <height>22</height>
-          </rect>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
-         </property>
-         <property name="text">
-          <string>Kommentar</string>
-         </property>
-        </widget>
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <widget class="QLabel" name="labelKommentar">
+           <property name="styleSheet">
+            <string notr="true">font: 12pt &quot;Ubuntu&quot;;</string>
+           </property>
+           <property name="text">
+            <string>Kommentar</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QTextEdit" name="kommentar"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="saveBtn">
+           <property name="styleSheet">
+            <string notr="true">border-radius: 10px;
+background-color: rgb(255, 255, 255);
+font: 12pt &quot;Ubuntu&quot;;</string>
+           </property>
+           <property name="text">
+            <string>Start saving Data</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="stopBtn">
+           <property name="text">
+            <string>Close CO2 Messstand</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
      </layout>
@@ -380,7 +376,6 @@ border: 2px solid;</string>
      <zorder>checkSaveT2</zorder>
      <zorder>checkSaveT3</zorder>
      <zorder>checkSaveT4</zorder>
-     <zorder>saveBtn</zorder>
      <zorder>valueP1</zorder>
      <zorder>valueP2</zorder>
      <zorder>writeP1</zorder>
@@ -389,6 +384,9 @@ border: 2px solid;</string>
      <zorder>checkSaveP2</zorder>
      <zorder>label_P1</zorder>
      <zorder>label_P2</zorder>
+     <zorder>horizontalSlider</zorder>
+     <zorder>lineEdit</zorder>
+     <zorder>plot2Widget</zorder>
     </widget>
    </item>
   </layout>
