--- a/form.ui
+++ b/form.ui
@@ -392,6 +392,23 @@ border: 2px solid;</string>
         </property>
        </widget>
       </item>
+      <item row="8" column="3">
+       <widget class="QSpinBox" name="plotLength">
+        <property name="maximum">
+         <number>1000</number>
+        </property>
+        <property name="value">
+         <number>500</number>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="2">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Num Plot</string>
+        </property>
+       </widget>
+      </item>
      </layout>
      <zorder>plot2Widget</zorder>
      <zorder>plotWidget</zorder>
@@ -425,6 +442,8 @@ border: 2px solid;</string>
      <zorder>sliderPosition</zorder>
      <zorder>valueTOut</zorder>
      <zorder>labelTOUT</zorder>
+     <zorder>plotLength</zorder>
+     <zorder>label_2</zorder>
     </widget>
    </item>
   </layout>
